--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
 1.0.4
-- Fixed: Stars Editor and Flowers Editor "Again" (the rest is under maintenance)
+- Fixed Stars Editor and Flowers Editor "Again" (the rest is under maintenance)
 - Fixed freeze items and increase items option when buy option (items detaileds into the list inside the tool)
