--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-1.0.5
-- Added an option to freeze spirits when summoning
-- Added an option to recive extra hissatsus/kenshins when summoning
+1.0.6
+- Fixed multiple options to work with the update 1.4.2
+- Added an option to multiply the buyed items by 2457
