--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-1.0.6
-- Fixed multiple options to work with the update 1.4.2
-- Added an option to multiply the buyed items by 2457
+1.1.0
+- Fixed multiple options to work with the update 1.5.1
+- Fixed the issue where it did not work when the game was on another disc.
