--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-1.2.0
-- Added passive editor
-- Added an option to increse the spirits when summoning
+1.3.0
+- Fixed multiple options to work with the update 2.0.2
+- Added an option to max your players
