--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,3 @@
-1.3.2
-- Fixed multiple options to work with the update 2.0.4
+1.3.3
+- Added an option to get free spirits shops
+- Fixed passive editor
