--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
 1.4.0
-- Added SkipStory Mod (does not require the Mod Manager)
+- Added SkipStory Mod (does not require the Mod Manager) (Game must be on disk C)
 - Added Custom Passives Option
