--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,3 @@
-1.6.2
-- Fixed Player Spirits Option
-- Added Flower Power to special moves
-- Added a method to enhance players from base to legendary
-- Added max online rank
+1.6.3
+- Fixed multiple options to work with the update 3.1.1
+- Added Nikas Himmelstein/Sei Soramiya Spirit
