--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
 1.6.3
 - Fixed multiple options to work with the update 3.1.1
-- Added Nikas Himmelstein/Sei Soramiya Spirit
+- Added Nikas Himmelstein/Sei Soramiya Hero Spirit
